# mcp-pmo-planner

./: .env.template  .gitignore  README.md  pmo-planner.py  pyproject.toml  server.py
core/: __init__.py  auth.py  avance_esperado.py  clients.py  security.py  services.py
