[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pmo-planner-core"
version = "0.1.0"
description = "Motor unificado e híbrido para Microsoft Planner y Dataverse"
authors = [{name = "Juan Carlos Sepulveda"}]
dependencies = [
    "mcp>=0.1.0",
    "python-dotenv>=1.0.0"
]
